[package]
name = "whirlpool-cpi"
version = "0.1.4"
authors = ["Developer Advocate from Orca"]
description = "CPI Adapter for Orca Whirlpool"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool_cpi"

[features]
default = ["cpi"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"

# unpack TickArray
bincode = "1.3.3"
default-boxed = "0.2.0"
